syntax = "proto3";
package api.v1.team;
option go_package = "github.com/ecojuntak/laklak/team";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "buf/validate/validate.proto";

message Team {
  int32 id = 1;
  string name = 2;
}

message CreateTeamRequest {
  string name = 1 [(google.api.field_behavior) = REQUIRED, (buf.validate.field).string.min_len = 2];
}
message CreateTeamResponse {
  string message = 1;
}

message GetTeamsRequest {}
message GetTeamsResponse {
  repeated Team teams = 1;
}

message GetTeamRequest {
  int32 id = 1 [(google.api.field_behavior) = REQUIRED, (buf.validate.field).required = true];
}
message GetTeamResponse {
  Team team = 1;
}

service TeamService {
  rpc Create(CreateTeamRequest) returns (CreateTeamResponse) {
    option (google.api.http) = {
      post: "/api/v1/teams"
      body: "*"
    };
  }

  rpc GetTeams(GetTeamsRequest) returns (GetTeamsResponse) {
    option (google.api.http) = {
      get: "/api/v1/teams"
    };
  }

  rpc GetTeam(GetTeamRequest) returns (GetTeamResponse) {
    option (google.api.http) = {
      get: "/api/v1/teams/{id}"
    };
  }
}
